assets/css/style.css
:root{
    --green: #009933 ;
    --darkblue: #123845;
    --fontblue: #142D36;
    --lightblue: #3992CC;
    --lightgrey: #6D7578;
    --pink: #FF3A44;
    --purple: #845CA7;
    --lightgreen: #2DA771;


}
*, *::before, *::after{
    box-sizing: border-box !important;
}
body a, li{
    text-decoration: none;
    list-style: none;
}

/* nav */

.cust-nav-bar{
    width:100%;
}
.cust-logo{
    width: 60%;
}
.custom__nav-link{
    font-family: 'Avenir', sans-serif;
    font-size: 1.2rem;        
    color: hsla(0, 0%, 0%, 1) !important;
}
.custom__nav-link-1{
    font-family: 'Avenir', sans-serif;
    font-size: 1.2rem; 
    color: #FF3A44!important;
}
.btn-custom{
    font-family: 'Avenir', sans-serif;
    font-size: 1.2rem; 
    background-color: var(--darkblue) !important;
    color: white !important;
}

/* main */

.hero-img{
    background-image: url("../images/hero_rectangle.png");
    width: 100% !important;
    min-height: 450px !important;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    
    border-radius: 50px !important;
}
.hero-text h1{
    font-family: 'Milligram Trial', sans-serif;
}
.reuseable{
    color: var(--green) !important;
}
.hero-text .animate-text u{
    display: inline-block;
    display: none;
}

.hero-text span u.text-in{
	display: block;
	animation: textIn .5s ease;
}
.hero-text span u.text-out{
	animation: textOut .5s ease;
}
@keyframes textIn{
	0%{
		transform: translateY(30%);
	}
	100%{
		transform: translateY(0%);
	}
}
@keyframes textOut{
	0%{
		transform: translateY(0%);
	}
	100%{
		transform: translateY(-30%);

	}
}
.hero-text p{
    font-family: 'Avenir', sans-serif;
    font-size: 1.3rem !important;
    font-weight:100 !important;
}


.btn-custom-1{
    background-color: var(--lightblue) !important;
    font-family: 'Avenir', sans-serif;
    font-size: 1.2rem !important;
    font-weight:200 !important;

}
.btn-custom-2{
    font-family: 'Avenir', sans-serif;
    font-size: 1.2rem !important;
    font-weight:300 !important;
    /* margin-left: 1rem; */
}


.mission{
 position: absolute;
 top: -15px;
 left: 680px;
}
.sav_earn-img {
    position: absolute;
    top: -100px;
    left: 720px;
    z-index: 50;
}
.plastic-stats{
    padding-top: 5rem;
} 
.text-group span{
    font-size: 1.3rem !important;
}
.waste_figures{
    font-family: 'Neogrey Medium', sans-serif;
    font-size: 1.3rem !important;
    color: var(--darkblue);
}

.waste_figures__desc{
    font-family: "Avenir", sans-serif;
    font-size: 1rem !important;
    color: var(--lightgrey);
    height: 60% !important;
    
}
.waste_figures__link {
    font-family: "Avenir", sans-serif;
    font-size: 0.9rem !important;
    color: var(--pink) ;
   
}
.waste_figures__link-1{
    color: var(--purple);
    font-size: 0.9rem !important;
    font-family: "Avenir", sans-serif;
   

}
.waste_figures__link-2{
    color: var(--green);
    font-size: 0.9rem !important;
    font-family: "Avenir", sans-serif;

   

}
.plastic_stats{
   margin-top: 20px;
}

.seal-video-section{
    margin-top: 20%!important;
}
.video-circle {
    width: 100%;
}


.brand-testimonial{
    width: 100%;
    /* background-color: #F9FBFA; */
    /* min-height: 300px; */
}
.partners-img-1{
    width: 80%;
    margin-top: 4rem;
    /* margin-left: 1rem; */
}
.partners-img-3{
    width: 50%;
    margin-top: 1rem;

}
.partners-img-4{
    width: 80%;
    margin-top: 1.5rem;

}
.users-category-detail{
    display: none;
}
.showing{
    display: block !important;
}
.custom-list{
    font-family: "Avenir", sans-serif;
    font-size: 1.2rem !important;
    color: var(--fontblue);
    background-color: #F5F5F5;
    border: 1px solid #E2E2E2;
}
/* .nav-link{
    font-family: "Avenir", sans-serif !important;
    font-size: 1.2rem !important;
    color: var(--fontblue) !important;
    background-color: #F5F5F5 !important;
    border: 1px solid #E2E2E2 !important;
}
.nav-link:hover{
    background-color: var(--lightgreen) !important;
    border-color: var(--green) !;
    color: white !important;
} */

.custom-list:hover{
    background-color: var(--lightgreen);
    border-color: var(--green);
    color: white !important;
    }


.image-container{
    position: relative;
}

.elipse-img{
    width: 100% !important;
}
.download-icon{
    position: absolute;
    top: 10px;
    left: 80px;
    right: -40px;
    width: 65%;
    z-index: 10;

}
.try-out{
    /* margin-right: 1rem 3rem; */
    background-image: url('../images/hero_rectangle.png');
    width: 100% !important;
    min-height: 450px !important;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    
    border-radius: 50px !important;
    z-index: 300;
}
.apple{
    position: absolute;
    top:300px;
    left: 95px;
    right: 30px;
    width: 25%;
    z-index: 20;
    }

.arrow-left{
    position: absolute;
    top: 400px;
    left: 180px;
    background-color: rgb(141, 140, 255, 20%);
    width: 80px;
    height: 80px;
    z-index: 30;
    border-radius: 50%;
    cursor: pointer;
}
.arrow-right{
    position: absolute;
    top: 400px;
    left: 290px;
    background-color: rgb(141, 140, 255, 80%);
    width: 80px;
    height: 80px;
    z-index: 30;
    border-radius: 50%;
    cursor: pointer;
}
.arrow-right:hover{
    background-color: rgb(141, 140, 255, 150%) !important;
}
.arrow-left:hover{
    background-color: rgb(141, 140, 255, 40%);
}
.ellipse{
    width: 500px; 
    height: 500px; 
    background-color: #e5e5e5; 
    border-radius: 50%;
}

.circle-left{
    background-color: rgb(150, 150, 223); 
    border-radius: 50%; 
    height: 100px; 
    width: 100px;
    top: 350px;
    left: 160px;
}
.circle-right{
    background-color: rgb(143 135 246); 
    border-radius: 50%;
    height: 80px; 
    width: 80px;
    top: 350px;
    left: 280px;
}
.btn-earn{
    margin: auto !important;
    cursor: pointer;
}
/* ... */

